--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <style>
         body {
             text-align: center;
-            font-family: Arial, sans-serif;
+            font-family:'Ananda Black';
+            src: url('fonts/ananda-black.ttf') format('truetype');
+}
             background-color: pink;
         }
         .container {
             margin-top: 50px;
         }
         .question {
-            font-size: 24px;
+            font-size: 40px;
         }
         .buttons {
-            margin-top: 20px;
+            margin-top: 30px;
         }
         button {
             font-size: 20px;
@@ -37,11 +39,11 @@
             display: none;
         }
         .big-gif {
-            width: 400px;
+            width: 500px;
             height: auto;
         }
         .top-gif {
-            width: 300px;
+            width: 450px;
             height: auto;
             margin-bottom: 20px;
         }
@@ -58,9 +60,8 @@
         </div>
         <div id="response" class="hidden">
             <h2>Yay! Can't wait to celebrate together! 🎉💖</h2>
-            <img src="images/3ohs4BSacFKI7A717y.gif" alt="Happy GIF" class="big-gif">
-            <br>
-            <img src="images/P3CZolxd8DeRy4g4fM.gif" alt="Hug GIF" class="big-gif">
+            <img src="images/hug-gif.gif" alt="Hug-GIF" class="big-gif">
+        
         </div>
     </div>
 
