--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             text-align: center;
             font-family:'Ananda Black';
             src: url('fonts/ananda-black.ttf') format('truetype');
-}
             background-color: pink;
         }
         .container {
@@ -33,8 +32,10 @@
             background-color: lightgreen;
         }
         #noBtn {
-            background-color: lightcoral;
-        }
+    position: relative;
+    background-color: lightcoral;
+      }
+       }
         .hidden {
             display: none;
         }
@@ -76,11 +77,10 @@
             response.classList.remove("hidden");
         });
         
-        noBtn.addEventListener("mouseover", () => {
-            const x = Math.random() * (window.innerWidth - 100);
-            const y = Math.random() * (window.innerHeight - 50);
-            noBtn.style.left = `${x}px`;
-            noBtn.style.top = `${y}px`;
+       noBtn.addEventListener("click", () => {
+    const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+    const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+    noBtn.style.left = `${x}px`;
         });
     </script>
 </body>
