--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div id="response" class="hidden">
             <h2>Yay! Can't wait to celebrate together!🌹🌺</h2>
-            <img src="hug-gif.gif." alt="Hug GIF" class="big-gif">
+            <img src="images/hug-gif.gif" alt="Hug GIF" class="big-gif">
            
     </div>
 
