--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <!-- Bottom Image -->
-    <img src="image/photo.jpeg" alt="Bottom Image" class="bottom-image">
+    <img src="image/photo.gif" alt="Bottom Image" class="bottom-image">
 
     <script>
         const yesBtn = document.getElementById("yesBtn");
